files with elevation angle from GPS

--- a/src/Data_Analysis/test_theodolites_function.ipynb
+++ b/src/Data_Analysis/test_theodolites_function.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-04T12:42:33.462719Z",
-     "start_time": "2025-09-04T12:42:33.177981Z"
+     "end_time": "2025-09-04T12:49:12.573638Z",
+     "start_time": "2025-09-04T12:49:12.271242Z"
     }
    },
    "source": "from function_calculation_elevation_from_GPS import process_elevation_gps",
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T12:42:34.784572Z",
-     "start_time": "2025-09-04T12:42:33.466486Z"
+     "end_time": "2025-09-04T12:49:13.907797Z",
+     "start_time": "2025-09-04T12:49:12.577418Z"
     }
    },
    "cell_type": "code",
@@ -30,7 +30,7 @@
     "alt_file = \"Data_Altitude/20250827_altitude_kite_from_wxt.csv\"\n",
     "date_str = \"2025-08-27\"\n",
     "start_time_str = \"09:08:09\"\n",
-    "output_csv = \"Data_ElevationAngle_GPS/20250827.csv\"\n",
+    "output_csv = \"20250827_elv_fromGPS.csv\"\n",
     "\n",
     "process_elevation_gps(gps_file, lidar_file,theo_file, alt_file, date_str, start_time_str,output_csv)"
    ],
@@ -41,7 +41,7 @@
      "output_type": "stream",
      "text": [
       "Metadata: S 25/08/27 09:08:09\n",
-      "Saved elevation data → Data_ElevationAngle_GPS/20250827.csv\n"
+      "Saved elevation data → 20250827_elv_fromGPS.csv\n"
      ]
     }
    ],
@@ -50,8 +50,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T12:42:38.040798Z",
-     "start_time": "2025-09-04T12:42:34.856798Z"
+     "end_time": "2025-09-04T12:49:17.240515Z",
+     "start_time": "2025-09-04T12:49:13.990045Z"
     }
    },
    "cell_type": "code",
@@ -81,15 +81,122 @@
       "Metadata: S 25/09/01 09:03:20\n",
       "Saved elevation data → Data_ElevationAngle_GPS/20250901_1stperiod.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                             time  elevation_angle\n",
+       "0   2025-09-01 09:03:20.660679936        49.175993\n",
+       "1   2025-09-01 09:03:48.610661120        65.784570\n",
+       "2   2025-09-01 09:04:16.560683008        47.087045\n",
+       "3   2025-09-01 09:04:44.510680064        60.933243\n",
+       "4   2025-09-01 09:05:12.910664192        46.609040\n",
+       "..                            ...              ...\n",
+       "169 2025-09-01 10:24:00.340691200        41.962439\n",
+       "170 2025-09-01 10:24:28.290669824        44.484672\n",
+       "171 2025-09-01 10:24:56.240664064        18.103275\n",
+       "172 2025-09-01 10:25:31.230658048        48.241609\n",
+       "173 2025-09-01 10:25:59.180666880        48.631771\n",
+       "\n",
+       "[174 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>elevation_angle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-09-01 09:03:20.660679936</td>\n",
+       "      <td>49.175993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-09-01 09:03:48.610661120</td>\n",
+       "      <td>65.784570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-09-01 09:04:16.560683008</td>\n",
+       "      <td>47.087045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-09-01 09:04:44.510680064</td>\n",
+       "      <td>60.933243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-09-01 09:05:12.910664192</td>\n",
+       "      <td>46.609040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>2025-09-01 10:24:00.340691200</td>\n",
+       "      <td>41.962439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>2025-09-01 10:24:28.290669824</td>\n",
+       "      <td>44.484672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>2025-09-01 10:24:56.240664064</td>\n",
+       "      <td>18.103275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>2025-09-01 10:25:31.230658048</td>\n",
+       "      <td>48.241609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>2025-09-01 10:25:59.180666880</td>\n",
+       "      <td>48.631771</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>174 rows × 2 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T12:42:41.225673Z",
-     "start_time": "2025-09-04T12:42:38.045210Z"
+     "end_time": "2025-09-04T12:49:20.536660Z",
+     "start_time": "2025-09-04T12:49:17.266098Z"
     }
    },
    "cell_type": "code",
@@ -114,15 +221,122 @@
       "Metadata: S 25/09/01 12:17:08\n",
       "Saved elevation data → Data_ElevationAngle_GPS/20250901_2ndperiod.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                             time  elevation_angle\n",
+       "0   2025-09-01 12:17:21.050699008        45.920002\n",
+       "1   2025-09-01 12:17:48.980739072        51.214729\n",
+       "2   2025-09-01 12:18:16.910660096        41.652249\n",
+       "3   2025-09-01 12:18:44.840670976        44.791957\n",
+       "4   2025-09-01 12:19:12.770668032        51.172488\n",
+       "..                            ...              ...\n",
+       "153 2025-09-01 13:29:51.460700160        64.712397\n",
+       "154 2025-09-01 13:30:22.430669056        17.896071\n",
+       "155 2025-09-01 13:30:50.390675968        42.250268\n",
+       "156 2025-09-01 13:31:18.340673024        50.851904\n",
+       "157 2025-09-01 13:31:46.300667904        12.891036\n",
+       "\n",
+       "[158 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>elevation_angle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-09-01 12:17:21.050699008</td>\n",
+       "      <td>45.920002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-09-01 12:17:48.980739072</td>\n",
+       "      <td>51.214729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-09-01 12:18:16.910660096</td>\n",
+       "      <td>41.652249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-09-01 12:18:44.840670976</td>\n",
+       "      <td>44.791957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-09-01 12:19:12.770668032</td>\n",
+       "      <td>51.172488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>2025-09-01 13:29:51.460700160</td>\n",
+       "      <td>64.712397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>2025-09-01 13:30:22.430669056</td>\n",
+       "      <td>17.896071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>2025-09-01 13:30:50.390675968</td>\n",
+       "      <td>42.250268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>2025-09-01 13:31:18.340673024</td>\n",
+       "      <td>50.851904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>2025-09-01 13:31:46.300667904</td>\n",
+       "      <td>12.891036</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>158 rows × 2 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T12:42:42.950283Z",
-     "start_time": "2025-09-04T12:42:41.230439Z"
+     "end_time": "2025-09-04T12:49:22.394458Z",
+     "start_time": "2025-09-04T12:49:20.558172Z"
     }
    },
    "cell_type": "code",
@@ -147,15 +361,122 @@
       "Metadata: S 25/09/03 08:48:09\n",
       "Saved elevation data → Data_ElevationAngle_GPS/20250903_1stperiod.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                             time  elevation_angle\n",
+       "0   2025-09-03 08:48:09.700980992        44.159326\n",
+       "1   2025-09-03 08:48:37.630952960        49.331925\n",
+       "2   2025-09-03 08:49:05.570969088        53.325035\n",
+       "3   2025-09-03 08:49:33.501024000        46.806234\n",
+       "4   2025-09-03 08:50:01.430974976        45.878815\n",
+       "..                            ...              ...\n",
+       "169 2025-09-03 10:08:51.321018880        42.658628\n",
+       "170 2025-09-03 10:09:19.251097856        45.658396\n",
+       "171 2025-09-03 10:09:47.161072128        57.442156\n",
+       "172 2025-09-03 10:10:15.861052928        38.526733\n",
+       "173 2025-09-03 10:10:43.801106944        45.128739\n",
+       "\n",
+       "[174 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>elevation_angle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-09-03 08:48:09.700980992</td>\n",
+       "      <td>44.159326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-09-03 08:48:37.630952960</td>\n",
+       "      <td>49.331925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-09-03 08:49:05.570969088</td>\n",
+       "      <td>53.325035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-09-03 08:49:33.501024000</td>\n",
+       "      <td>46.806234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-09-03 08:50:01.430974976</td>\n",
+       "      <td>45.878815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>2025-09-03 10:08:51.321018880</td>\n",
+       "      <td>42.658628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>2025-09-03 10:09:19.251097856</td>\n",
+       "      <td>45.658396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>2025-09-03 10:09:47.161072128</td>\n",
+       "      <td>57.442156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>2025-09-03 10:10:15.861052928</td>\n",
+       "      <td>38.526733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>2025-09-03 10:10:43.801106944</td>\n",
+       "      <td>45.128739</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>174 rows × 2 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T12:42:44.195942Z",
-     "start_time": "2025-09-04T12:42:42.954909Z"
+     "end_time": "2025-09-04T12:49:23.653791Z",
+     "start_time": "2025-09-04T12:49:22.415509Z"
     }
    },
    "cell_type": "code",
@@ -180,15 +501,122 @@
       "Metadata: S 25/09/03 12:42:17\n",
       "Saved elevation data → Data_ElevationAngle_GPS/20250903_2ndperiod.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                             time  elevation_angle\n",
+       "0   2025-09-03 12:42:37.980987904        59.114423\n",
+       "1   2025-09-03 12:43:05.920955904        26.091134\n",
+       "2   2025-09-03 12:43:33.850949120        75.130965\n",
+       "3   2025-09-03 12:44:01.791006976        40.272363\n",
+       "4   2025-09-03 12:44:29.730951168        53.966436\n",
+       "..                            ...              ...\n",
+       "169 2025-09-03 14:03:08.410960896        46.539733\n",
+       "170 2025-09-03 14:03:36.350949120        41.613783\n",
+       "171 2025-09-03 14:04:04.290978048        48.769083\n",
+       "172 2025-09-03 14:04:32.220972032        48.364052\n",
+       "173 2025-09-03 14:05:00.160957952        45.187540\n",
+       "\n",
+       "[174 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>elevation_angle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-09-03 12:42:37.980987904</td>\n",
+       "      <td>59.114423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-09-03 12:43:05.920955904</td>\n",
+       "      <td>26.091134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-09-03 12:43:33.850949120</td>\n",
+       "      <td>75.130965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-09-03 12:44:01.791006976</td>\n",
+       "      <td>40.272363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-09-03 12:44:29.730951168</td>\n",
+       "      <td>53.966436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>2025-09-03 14:03:08.410960896</td>\n",
+       "      <td>46.539733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>2025-09-03 14:03:36.350949120</td>\n",
+       "      <td>41.613783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>2025-09-03 14:04:04.290978048</td>\n",
+       "      <td>48.769083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>2025-09-03 14:04:32.220972032</td>\n",
+       "      <td>48.364052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>2025-09-03 14:05:00.160957952</td>\n",
+       "      <td>45.187540</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>174 rows × 2 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T12:42:44.201144Z",
-     "start_time": "2025-09-04T12:42:44.200009Z"
+     "end_time": "2025-09-04T12:49:23.676220Z",
+     "start_time": "2025-09-04T12:49:23.675013Z"
     }
    },
    "cell_type": "code",
